--- a/src/main/resources/templates/admin/notifications/add-notification.html
+++ b/src/main/resources/templates/admin/notifications/add-notification.html
@@ -6,13 +6,13 @@
     <title>Add new notification</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Classes</div>
-<div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
-    <table align="center" style="text-align: center; width:80%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Classes</h2>
+    <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
             <th>Topic</th>
             <th>Date</th>
@@ -22,7 +22,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="class : ${classes}">
+        <tr th:each="class : ${classes}" style="background-color: palegreen; width: 100%; color: darkgreen;">
             <td th:text="${class.id}"></td>
             <td th:text="${class.topic}"></td>
             <td th:text="${class.date}"></td>
@@ -34,44 +34,28 @@
     </table>
 </div>
 </div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Add new notification to the chosen class</div>
-<div class="container" style="margin-top:100px;">
+<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Add new notification to the chosen class</h2>
     <div class="row">
         <form th:action="@{/main-page/notifications/add}" th:object="${newNotification}" method="post">
             <div class="mb-3">
-                <label for="notification-topic" class="form-label">Topic</label>
-                <input type="text" class="form-control" id="notification-topic" th:field="*{topic}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="notification-topic" class="form-label">Topic</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="notification-topic" th:field="*{topic}">
             </div>
-
             <div class="mb-3">
-                <label for="notification-text" class="form-label">Text</label>
-                <input type="text" class="form-control" id="notification-text" th:field="*{text}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="notification-text" class="form-label">Text</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="notification-text" th:field="*{text}">
             </div>
-
             <div class="mb-3">
-                <label for="class-id" class="form-label">Class Id</label>
-                <input type="text" placeholder="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{classId}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-id" class="form-label">Class Id</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{classId}">
             </div>
             <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
+                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Add</button>
             </div>
         </form>
     </div>
 </div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/notifications-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Notifications Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-    </form>
-</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
-
 </body>
 </html>
