--- a/src/main/resources/templates/admin/notifications/update-notification.html
+++ b/src/main/resources/templates/admin/notifications/update-notification.html
@@ -6,13 +6,13 @@
     <title>Update notification</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="margin-top: 10px; background-color: white; padding: 50px; border-radius:20px;">
-    <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Classes</div>
-    <table align="center" style="text-align: center; width:80%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Classes</h2>
+    <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
             <th>Topic</th>
             <th>Date</th>
@@ -22,7 +22,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="class : ${classes}">
+        <tr th:each="class : ${classes}" style="background-color: palegreen; width: 100%; color: darkgreen;">
             <td th:text="${class.id}"></td>
             <td th:text="${class.topic}"></td>
             <td th:text="${class.date}"></td>
@@ -33,12 +33,11 @@
         </tbody>
     </table>
 </div>
-
-<div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
-    <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Notifications</div>
-    <table align="center" style="text-align: center; width:100%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Notifications</h2>
+    <table class="table table-striped" align="center" style="text-align: center; width: 100%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 30pt">
             <th>Id</th>
             <th>Topic</th>
             <th>Text</th>
@@ -50,7 +49,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="notification : ${notifications}">
+        <tr th:each="notification : ${notifications}" style="background-color: palegreen; width: 100%; color: darkgreen;">
             <td th:text="${notification.id}"></td>
             <td th:text="${notification.topic}"></td>
             <td th:text="${notification.text}"></td>
@@ -63,45 +62,33 @@
         </tbody>
     </table>
 </div>
-
-
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Update notification</div>
-<div class="container" style="margin-top:100px;">
+<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
+    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Update notification</h2>
+</div>
+<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
     <div class="row">
         <form th:action="@{/main-page/notifications/update}" th:object="${notificationToUpdate}" method="post">
             <div class="mb-3">
-                <label for="notification-id" class="form-label">Notification id</label>
-                <input type="text" placeholder="Type id of EXISTING notification" class="form-control" id="notification-id" th:field="*{id}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="notification-id" class="form-label">Notification id</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING notification" class="form-control" id="notification-id" th:field="*{id}">
             </div>
             <div>
-                <label for="notification-new-topic" class="form-label">New notification topic</label>
-                <input type="text" class="form-control" id="notification-new-topic" th:field="*{topic}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="notification-new-topic" class="form-label">New notification topic</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="notification-new-topic" th:field="*{topic}">
             </div>
             <div class="mb-3">
-                <label for="notification-text" class="form-label">New notification text</label>
-                <input type="text" class="form-control" id="notification-text" th:field="*{text}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="notification-text" class="form-label">New notification text</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="notification-text" th:field="*{text}">
             </div>
             <div class="mb-3">
-                <label for="class-id" class="form-label">New class id</label>
-                <input type="text" PLACEHOLDER="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{classId}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="class-id" class="form-label">New class id</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" PLACEHOLDER="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{classId}">
             </div>
             <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 40%">Update</button>
+                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Update</button>
             </div>
         </form>
     </div>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/notifications-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Notifications Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
-    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
